Fixed scripts